QuantServer#1447 On reconnect, set CONNECTED status only if all disconnected...