@@ -70,7 +70,7 @@ configure(leafProjects) {
     // Defines versions of dependencies to be used by subprojects
     dependencyManagement {
         imports {
-            mavenBom 'org.junit:junit-bom:5.13.0'
+            mavenBom 'org.junit:junit-bom:5.14.0'
         }
         dependencies {
             dependency 'deltix:deltix-thread-affinity:1.0.3'
@@ -153,7 +153,8 @@ configure(leafProjects) {
             }
         }
 
-        jvmArgs '-Dgflog.sync=true', '-Dgflog.console.appender.wrap=true' // sync logging to not mix up messages from different tests
+        // sync logging to not mix up messages from different tests
+        jvmArgs '-Dgflog.sync=true', '-Dgflog.console.appender.wrap=true', '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
     }
 
     spotbugs {
